--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   url_launcher: ^6.0.20
   smooth_page_indicator: ^1.2.0+3
   shared_preferences: ^2.3.2
+  loading_animation_widget: ^1.2.1
 
 
 dev_dependencies:
