--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,8 @@ dependencies:
   smooth_page_indicator: ^1.2.0+3
   shared_preferences: ^2.3.2
   loading_animation_widget: ^1.2.1
+  flutter_rating_bar: ^4.0.0
+
 
 
 dev_dependencies:
